Add home page markup

--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,1 +1,3 @@
-<header role="banner" class="site-header"></header>
+<header role="banner" class="site-header">
+  <a href="/">{{ site.title }}</a>
+</header>
