--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,3 +1,3 @@
 <footer role="contentinfo" class="site-footer">
-  <p>An ode to seasonal living, made by <a href="https://melanie-richards.com">Melanie Richards</a>. <a href="https://github.com/melanierichards/seasons.melanie-richards.com">View on Github</a></p>
+  <p>An ode to seasonal living, made by <a href="https://melanie-richards.com">Melanie Richards</a>. <a class="site-footer__github" href="https://github.com/melanierichards/seasons.melanie-richards.com">View on Github</a></p>
 </footer>
