--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,3 +1,3 @@
 <header role="banner" class="site-header">
-  <a href="/">{{ site.title }}</a>
+  <a class="site-header__home" href="/">{{ site.title }}</a>
 </header>
