--- a/_includes/layouts/global.njk
+++ b/_includes/layouts/global.njk
@@ -2,9 +2,8 @@
 <html lang="en" {% if slug %}class="html--{{ slug }}"{% endif %}>
 {% include "head.njk" %}
 <body {% if slug %}class="body--{{ slug }}"{% endif %}>
-  <a href="#main" class="skip-link skip-link--main">Skip to main content</a>
   {% include "header.njk" %}
-  <main role="main" id="main" tabindex="-1">
+  <main role="main" id="main">
     {{ content | safe }}
   </main>
   {% include "footer.njk" %}
