--- a/_includes/layouts/global.njk
+++ b/_includes/layouts/global.njk
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" {% if slug %}class="html--{{ slug }}"{% endif %}>
 {% include "head.njk" %}
-<body {% if slug %}class="body--{{ slug }}"{% endif %}>
+<body class="body--{% if slug %}{{ slug }}{% else %}{{ title | slug }}{% endif %}">
   {% include "header.njk" %}
+  {% include "icon-defs.njk" %}
   <main role="main" id="main">
     {{ content | safe }}
   </main>
