--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -6,7 +6,7 @@
 
 .site-masthead {
   margin: 0 auto;
-  padding: 3rem 2rem;
+  padding: 3rem $space-s;
   max-width: 34em;
 }
 
@@ -17,7 +17,7 @@
 .season-item {
   @include bare-list-item();
   outline: 1px solid;
-  padding: 1rem;
+  padding: $space-s;
 }
 
 .season-item__link {
@@ -121,40 +121,40 @@
 
 .season-item__link--late-winter:hover,
 .season-item__link--late-winter:focus {
-  background-color: #edf3f4;
+  background-color: $color-late-winter;
 }
 
 .season-item__link--early-spring:hover,
 .season-item__link--early-spring:focus {
-  background-color: #f2f7f4;
+  background-color: $color-early-spring;
 }
 
 .season-item__link--late-spring:hover,
 .season-item__link--late-spring:focus {
-  background-color: #f4f8f3;
+  background-color: $color-late-spring;
 }
 
 .season-item__link--early-summer:hover,
 .season-item__link--early-summer:focus {
-  background-color: #f2f2f0;
+  background-color: $color-early-summer;
 }
 
 .season-item__link--late-summer:hover,
 .season-item__link--late-summer:focus {
-  background-color: #f2f1f0;
+  background-color: $color-late-summer;
 }
 
 .season-item__link--early-autumn:hover,
 .season-item__link--early-autumn:focus {
-  background-color: #f4f2f2;
+  background-color: $color-early-autumn
 }
 
 .season-item__link--late-autumn:hover,
 .season-item__link--late-autumn:focus {
-  background-color: #f2f0f1;
+  background-color: $color-late-autumn;
 }
 
 .season-item__link--early-winter:hover,
 .season-item__link--early-winter:focus {
-  background-color: #f2f2f5;
+  background-color: $color-early-winter;
 }
