--- a/assets/sass/global.scss
+++ b/assets/sass/global.scss
@@ -4,7 +4,7 @@
  *  =============================================
  */
 
- * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -36,7 +36,7 @@ body {
 a:link, a:visited {
   border-bottom: 1px solid;
   text-decoration: none;
-  color: inherit;
+  color: #000;
 }
 
 a:hover {
@@ -55,8 +55,30 @@ h1, h2, .h2 {
   font: 2rem/1.1 $font-heading;
 }
 
-h2, .h2 {
+h2, .h2, h3 {
+  @include all-caps();
+  margin: 2.25rem 0 $space-s;
   font-size: 1rem;
+
+  &:first-child {
+    margin-top: 0;
+  }
+}
+
+.h2 {
+  display: block;
+}
+
+h3 {
+  font-size: .875rem;
+}
+
+p, ul, ol {
+  margin-top: 1em;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 /*
@@ -67,7 +89,7 @@ h2, .h2 {
 
 .site-header,
 .site-footer {
-  padding: 1.5rem 2rem;
+  padding: $space-s;
   text-align: center;
 }
 
@@ -93,6 +115,10 @@ h2, .h2 {
   display: inline-block;
 }
 
+.icon-defs {
+  display: none;
+}
+
 /*
  *  --------------------------------------------
  *  MAIN
@@ -101,6 +127,8 @@ h2, .h2 {
 
 main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 /*
