--- a/assets/sass/sass-helpers.scss
+++ b/assets/sass/sass-helpers.scss
@@ -6,14 +6,25 @@
 
 /*
  *  --------------------------------------------
+ *  SPACING
+ *  --------------------------------------------
+ */
+
+$space-xxs: .5rem;
+$space-xs: .75rem;
+$space-s: 1.5rem;
+$space-m: 3rem;
+
+/*
+ *  --------------------------------------------
  *  BREAKPOINTS
  *  --------------------------------------------
  */
 
 $bp-s: 32em;
 $bp-m: 48em;
-$bp-l: 68em;
-$bp-xl: 75em;
+$bp-l: 64em;
+$bp-xl: 80em;
 
 /*
  *  --------------------------------------------
@@ -23,6 +34,21 @@ $bp-xl: 75em;
 
 $font-heading: "Young Serif", Georgia, serif;
 $font-body: "Libre Baskerville", Georgia, serif;
+
+/*
+ *  --------------------------------------------
+ *  COLORS
+ *  --------------------------------------------
+ */
+
+$color-late-winter: #edf3f4;
+$color-early-spring: #f2f7f4;
+$color-late-spring: #f4f8f3;
+$color-early-summer: #f2f2f0;
+$color-late-summer: #f2f1f0;
+$color-early-autumn: #f4f2f2;
+$color-late-autumn: #f2f0f1;
+$color-early-winter: #f2f2f5;
 
 /*
  *  --------------------------------------------
