--- a/assets/sass/season.scss
+++ b/assets/sass/season.scss
@@ -22,15 +22,7 @@
   border-top: 1px solid;
 }
 
-.season-masthead {
-  text-align: center;
-}
-
-.season-masthead__dates {
-  margin: 0 auto $space-xxs;
-}
-
-.season-masthead__icon {
+.season-masthead .c-season-info__icon {
   margin: $space-s auto;
 }
 
