Make home page background very light grey

--- a/assets/sass/global.scss
+++ b/assets/sass/global.scss
@@ -15,6 +15,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font: 1em/1.5 $font-body;
+  background-color: #fcfcfc;
   color: #3b3b3b;
 }
 
