Add dark mode support

--- a/_includes/icon-defs.njk
+++ b/_includes/icon-defs.njk
@@ -1,6 +1,7 @@
-<svg class="icon-defs" width="24" height="13" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg class="icon-defs" width="35" height="13" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
   <defs id="icons">
-    <g id="pagination-older" color="currentColor" fill="transparent"><path d="M7 1L1 6.5 7 12" stroke="#000"/><path d="M11 1L5 6.5l6 5.5" stroke="#000"/></g>
-    <g id="pagination-newer" color="currentColor" fill="transparent"><path d="M5 1l6 5.5L5 12" stroke="#000"/><path d="M1 1l6 5.5L1 12" stroke="#000"/></svg>
+    <g id="pagination-older" fill="transparent"><path d="M7 1L1 6.5 7 12" stroke="currentColor"/><path d="M11 1L5 6.5l6 5.5" stroke="currentColor"/></g>
+    <g id="pagination-newer" fill="transparent"><path d="M5 1l6 5.5L5 12" stroke="currentColor"/><path d="M1 1l6 5.5L1 12" stroke="currentColor"/></g>
+    <g id="right-arrow" fill="transparent"><path d="M1 1l7.636 7L1 15" stroke="currentColor" stroke-width="2"/></g>
   </defs>
 </svg>
