--- a/assets/sass/sass-helpers.scss
+++ b/assets/sass/sass-helpers.scss
@@ -25,6 +25,8 @@ $bp-s: 32em;
 $bp-m: 48em;
 $bp-l: 64em;
 $bp-xl: 80em;
+$bp-xxl: 96em;
+$bp-xxxl: 124em;
 
 /*
  *  --------------------------------------------
