Update icons for forced color modes

--- a/_includes/icon-defs.njk
+++ b/_includes/icon-defs.njk
@@ -1,4 +1,5 @@
 <svg class="icon-defs" width="35" height="13" focusable="false" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <style>@media (forced-colors: active) {path {stroke: LinkText;}}</style>
   <defs id="icons">
     <g id="pagination-older" fill="transparent"><path d="M7 1L1 6.5 7 12" stroke="currentColor"/><path d="M11 1L5 6.5l6 5.5" stroke="currentColor"/></g>
     <g id="pagination-newer" fill="transparent"><path d="M5 1l6 5.5L5 12" stroke="currentColor"/><path d="M1 1l6 5.5L1 12" stroke="currentColor"/></g>
