Add ideas for spring

--- a/_includes/c-ideas.njk
+++ b/_includes/c-ideas.njk
@@ -11,7 +11,7 @@
             {{ item.text }}
           {% endif %}
           {% if item.desc %}
-            <span class="c-idea__desc">{{ item.desc }}</span>
+            <p class="c-idea__desc">{{ item.desc }}</p>
           {% endif %}
         {% endif %}
       </li>
