--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,3 +1,15 @@
 <footer role="contentinfo" class="site-footer">
-  <p>An ode to seasonal living, made by <a href="https://melanie-richards.com">Melanie Richards</a>. <a class="site-footer__github" href="https://github.com/melanierichards/seasons.melanie-richards.com">View code on Github</a>. Sources include: <a href="https://bucketlistjourney.net/">Buckelist Journey</a>, <a href="https://www.mabonhouse.co/">Mabon House</a>, <a href="https://www.almanac.com/">The Old Farmer’s Almanac</a>, <a href="https://www.thespruceeats.com/washington-seasonal-fruits-and-vegetables-2217197">The Spruce Eats</a>, <a href="https://visitseattle.org/things-to-do/events/festivals/">Visit Seattle</a>.</p>
+  <div id="notifs-wrap"></div>
+  <p class="site-footer__colophon">An ode to seasonal living, made by <a href="https://melanie-richards.com">Melanie Richards</a>. <a class="site-footer__github" href="https://github.com/melanierichards/seasons.melanie-richards.com">View code on Github</a>. Sources include: <a href="https://bucketlistjourney.net/">Buckelist Journey</a>, <a href="https://www.mabonhouse.co/">Mabon House</a>, <a href="https://www.almanac.com/">The Old Farmer’s Almanac</a>, <a href="https://www.thespruceeats.com/washington-seasonal-fruits-and-vegetables-2217197">The Spruce Eats</a>, <a href="https://visitseattle.org/things-to-do/events/festivals/">Visit Seattle</a>.</p>
 </footer>
+
+<!-- Add seasonal notifications where service workers are supported -->
+<script>
+  if ('serviceWorker' in navigator && 'showTrigger' in Notification.prototype) {
+    const notifsScript = document.createElement('script');
+    notifsScript.src = '/assets/js/notifications.js';
+    document.body.appendChild(notifsScript);
+
+    navigator.serviceWorker.register('/service-worker.js');
+  }
+</script>
