Fix visual issue on Github link

--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,6 +1,6 @@
 <footer role="contentinfo" class="site-footer">
   <div id="notifs-wrap"></div>
-  <p class="site-footer__colophon">An ode to seasonal living, made by <a href="https://melanie-richards.com">Melanie Richards</a>. <a class="site-footer__github" href="https://github.com/melanierichards/seasons.melanie-richards.com">View code on Github</a>. Sources include: <a href="https://bucketlistjourney.net/">Buckelist Journey</a>, <a href="https://www.mabonhouse.co/">Mabon House</a>, <a href="https://www.almanac.com/">The Old Farmer’s Almanac</a>, <a href="https://www.thespruceeats.com/washington-seasonal-fruits-and-vegetables-2217197">The Spruce Eats</a>, <a href="https://visitseattle.org/things-to-do/events/festivals/">Visit Seattle</a>.</p>
+  <p class="site-footer__colophon">An ode to seasonal living, made by <a href="https://melanie-richards.com">Melanie Richards</a>. <a href="https://github.com/melanierichards/seasons.melanie-richards.com">View code on Github</a>. Sources include: <a href="https://bucketlistjourney.net/">Buckelist Journey</a>, <a href="https://www.mabonhouse.co/">Mabon House</a>, <a href="https://www.almanac.com/">The Old Farmer’s Almanac</a>, <a href="https://www.thespruceeats.com/washington-seasonal-fruits-and-vegetables-2217197">The Spruce Eats</a>, <a href="https://visitseattle.org/things-to-do/events/festivals/">Visit Seattle</a>.</p>
 </footer>
 
 <!-- Add seasonal notifications where service workers are supported -->
